--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 /test/version_tmp/
 /tmp/
 
-/log/
-/db/development.sqlite3
+log/
+db/development.sqlite3
 
 # Used by dotenv library to load environment variables.
 # .env
