--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: events
+#
+#  id          :integer          not null, primary key
+#  description :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  incident_id :integer
+#  status      :string
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
